--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,10 @@ dependencies {
     implementation ('com.vk:androidsdk:2.0.0') {
         exclude group: 'com.android.support'
     }
+
+    implementation ('com.facebook.android:facebook-login:4.40.0')  {
+        exclude group: 'com.android.support'
+    }
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:customtabs:28.0.0'
 }
