--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,8 @@ dependencies {
     }
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:customtabs:28.0.0'
+
+    implementation ('com.google.android.gms:play-services-auth:16.0.1') {
+        exclude group: 'com.android.support'
+    }
 }
